--- a/public/index.css
+++ b/public/index.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
   border: 1px solid black;
   width: 100%;
-  height: 100%;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -52,4 +51,21 @@ a,
 a:hover {
   color: white !important;
   text-decoration: none !important;
+}
+
+.color-picker {
+  margin: 1rem 1rem 0 1rem;
+}
+
+.header {
+  min-height: 135px;
+}
+
+input[type=range] {
+  display: inline !important;
+  width: 50% !important;
+}
+
+.images {
+  margin-bottom: 35px;
 }
