--- a/public/index.css
+++ b/public/index.css
@@ -54,7 +54,7 @@ a:hover {
 }
 
 .color-picker {
-  margin: 1rem 1rem 0 1rem;
+  margin: 1rem 1rem 0 0;
 }
 
 .header {
@@ -68,4 +68,12 @@ input[type=range] {
 
 .images {
   margin-bottom: 35px;
+}
+
+.images-header {
+  min-height: 165px !important;
+}
+
+.btn-group-item{
+  padding: 0px !important;
 }
